:bug: Fixed some spacing and focus bugs with terminal

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -149,7 +149,7 @@ div[data-template-is-fullscreen="true"]
  */
 
 .xterm {
-    @apply p-3 flex-1;
+    @apply p-3 ;
 }
 
 
